Replace split with aligned

--- a/src/content/lessen/fysica/grootheden_eenheden/machten_van_10/index.mdx
+++ b/src/content/lessen/fysica/grootheden_eenheden/machten_van_10/index.mdx
@@ -37,13 +37,13 @@ Hoe komen we aan die $\orange{10^{-9}}$ bij het voorbeeld van $0{,}00000000334
 = 3{,}34\cdot \orange{10^{-9}}$? Voor we tonen waar die vandaan komt, bespreken
 we eerst hoe we een macht van 10 ook al weer uitrekenen. Enkele voorbeelden:
 
-\begin{split}
+$\begin{aligned}
 2{,}6211\cdot \orange{10^2} = 2{,}6211 \cdot \orange{100} = 262{,}11\\
  -0{,}0075\cdot \orange{10^3} = -0{,}0075\cdot \orange{1000} = -7{,}5\\
  6{,}3\cdot \orange{10^{-3}} = 6{,}3 \cdot \orange{0{,}001} = 0{,}0063\\
  405{,}9\cdot \orange{10^{-2}} = 405{,}9 \cdot \orange{0{,}01} = 4{,}059\\
  51\cdot \orange{10^{3}} = 51 \cdot \orange{1000} = 51\ 000\\
-\end{split}
+\end{aligned}$
 
 Je ziet dat vermenigvuldigen met een macht van 10
 ervoor zorgt dat de **komma verschuift**.
@@ -66,12 +66,12 @@ We willen de komma van $0{,}00000000334$ met
    moeten we ook terug
    **<span class="orange">delen door $10^9$</span>**.
 
-\begin{split}
+$\begin{aligned}
 0{,}00000000334 &= 0{,}00000000334 \cdot \frac{\blue{10^9}}{\orange{10^9}} \\
  &= 0{,}00000000334 \cdot \blue{10^9} \cdot \frac{1}{\orange{10^9}} \\
  &= \udotblue{0{,}00000000334 \cdot \blue{10^{9}}} \cdot \orange{10^{-9}} \\
  &= \udotblue{3{,}34} \cdot \orange{10^{-9}}
-\end{split}
+\end{aligned}$
 
 Het **<span class="orange">delen door $10^9$</span>** komt neer op
 een **<span class="orange">vermenigvuldigen met $10^{-9}$</span>**. We kunnen dus ook
@@ -92,10 +92,10 @@ natuurlijk dat onze uitkomst
 Daarom moeten we ook terug delen door $10^{-11}$. Dat is echter hetzelfde als
 **<span class="orange">vermenigvuldigen met $10^{11}$</span>**.
 
-\begin{split}
+$\begin{aligned}
 149\ 600\ 000\ 000 &= \udotblue{149\ 600\ 000\ 000 \cdot \blue{10^{-11}}} \cdot \orange{10^{11}} \\
  &= \udotblue{1{,}496} \cdot \orange{10^{11}} \\
-\end{split}
+\end{aligned}$
 
 Merk wel op dat nu het aantal [beduidende cijfers](beduidende_cijfers) is
 veranderd van 12 naar 4. Je kan het juiste aantal beduidende cijfers
@@ -111,12 +111,12 @@ zullen we de $3{,}34 \cdot 10^{-9}$
 en vervolgens
 **<span class="orange">vermenigvuldigen met $10^{11}$ om het getal gelijk te houden</span>**.
 
-\begin{split}
+$\begin{aligned}
 3{,}34 \cdot 10^{-9} &= 3{,}34 \cdot \udotorange{10^{-9} \cdot \orange{10^{11}}} \cdot \blue{10^{-11}} \\
  &= 3{,}34 \cdot \udotorange{10^{2}} \cdot \blue{10^{-11}} \\
  &= \udoubleorange{3{,}34 \cdot 10^{2}} \cdot \blue{10^{-11}} \\
  &= \udoubleorange{334} \cdot \blue{10^{-11}} \\
-\end{split}
+\end{aligned}$
 
 ## Samengevat
 
