--- a/src/content/lessen/fysica/grootheden_eenheden/wetenschappelijke_notatie/index.mdx
+++ b/src/content/lessen/fysica/grootheden_eenheden/wetenschappelijke_notatie/index.mdx
@@ -27,14 +27,14 @@ We passen hier dezelfde techniek toe om de komma te verschuiven tot na het eerst
 
 Bijvoorbeeld: zet $-345{,}2$ om naar wetenschappelijke schrijfwijze. Dat wil zeggen: verschuif de komma tot die na het eerste beduidend cijfer staat. Hier betekent dat: **twee plaatsen naar links**. Met [de techniek](machten_van_10#getallen-omzetten-naar-een-macht-van-10) uit de les over machten van 10, gaat dat als volgt:
 
-\begin{split}
+$\begin{aligned}
 -345{,}2 &= -345{,}2\cdot \blue{10^{-2}}\cdot \orange{10^{2}}\\
  &= \blue{-3{,}452} \cdot \orange{10^{2}}
-\end{split}
+\end{aligned}$
 
 Een ander voorbeeld, waarbij we nu de komma **vier plaatsen naar rechts** moeten schuiven:
 
-\begin{split}
+$\begin{aligned}
 0{,}0002495 &= 0{,}0002495\cdot \blue{10^{4}}\cdot \orange{10^{-4}}\\
  &= \blue{2{,}495} \cdot \orange{10^{-4}}
-\end{split}
+\end{aligned}$
