--- a/src/content/lessen/fysica/krachten_1/normaalkracht_en_gewicht/index.mdx
+++ b/src/content/lessen/fysica/krachten_1/normaalkracht_en_gewicht/index.mdx
@@ -69,13 +69,13 @@ op de glijbaan. Er zijn geen andere krachten die Maria tegen de glijbaan
 trekken. Daarom is de grootte het gewicht $\vec{F}\_g$ dat ze uitoefent op de
 glijbaan gelijk aan de grootte van de zwaartekracht op Maria.
 
-\begin{split}
+$\begin{aligned}
 F_g &= F\_{zM}\\
  &= m_M \cdot g\\
  &= 65{,}0~\si{kg} \cdot 9{,}81~\si{N/kg}\\
  &= 637{,}65~\si{N}\\
  &\breq 638~\si{N}\\
-\end{split}
+\end{aligned}$
 
 ![Het gewicht uitgeoefend door Maria op de glijbaan](img/gewicht_maria.png)
 
