--- a/src/content/lessen/fysica/krachten_1/zwaartekracht/index.mdx
+++ b/src/content/lessen/fysica/krachten_1/zwaartekracht/index.mdx
@@ -79,33 +79,33 @@ Stel dat onze bowlingbal een massa heeft van $5{,}00~\si{kg}$. Welke kracht zal
 Dirk dan voelen wanneer hij de bal vasthoudt op de aarde? Neem
 $g_{aarde}=9{,}81~\si{N/kg}$.
 
-\begin{split}
+$\begin{aligned}
 F\_{zb} &= m_b \cdot g\_{aarde}\\
  &= 5{,}00~\si{kg} \cdot 9{,}81~\si{N/kg}\\
  &= 49{,}1~\si{N}
-\end{split}
+\end{aligned}$
 
 ![](img/zwaartekracht_bowlingbal_aarde_oefening.png)
 
 Dirk gaat nu naar de maan en houdt daar dezelfde bowlingbal vast. Welke kracht
 voelt Dirk nu? Neem $g_{maan}=1{,}62~\si{N/kg}$.
 
-\begin{split}
+$\begin{aligned}
 F\_{zb} &= m_b \cdot g\_{maan}\\
  &= 5{,}00~\si{kg} \cdot 1{,}62~\si{N/kg}\\
  &= 8{,}10~\si{N}
-\end{split}
+\end{aligned}$
 
 ![](img/zwaartekracht_bowlingbal_maan_oefening.png)
 
 De voetbal heeft een massa van $410~\si{g}$. Welke kracht voelt Dirk als hij de
 bal vasthoudt op aarde?
 
-\begin{split}
+$\begin{aligned}
 F\_{zv} &= m_v \cdot g\_{aarde}\\
  &= 0{,}410~\si{kg} \cdot 9{,}81~\si{N/kg}\\
  &= 4{,}02~\si{N}
-\end{split}
+\end{aligned}$
 
 ![](img/zwaartekracht_voetbal_aarde_oefening.png)
 
