--- a/src/content/lessen/wiskunde/1g_vgl/oplossen/index.mdx
+++ b/src/content/lessen/wiskunde/1g_vgl/oplossen/index.mdx
@@ -54,23 +54,23 @@ vergelijking _opkuisen_ tot zowel de linker- als rechterkant de vorm $ax + b$
 heeft. Dit doen we door links en rechts de termen met hetzelfde lettergedeelte samen
 te nemen.
 
-\begin{split}
+$\begin{aligned}
 \red{-3x} - 2 \red{+ x} &= \blue{15}
 \green{- 6x}
 \green{+ 9x} \blue{-3}\\
  \Leftrightarrow \red{-2x} - 2 &= \green{3x} + \blue{12}
-\end{split}
+\end{aligned}$
 
 We krijgen nu een vergelijking van de vorm
 $$\red{a\_{links}\cdot x} + b\_{links} = \green{a\_{rechts}\cdot x} + \blue{b\_{rechts}}$$
 
 Waarbij
-\begin{split}
+$\begin{aligned}
 \red{a\_{links}} &= \red{-2}\\
  b\_{links} &= -2\\
  \green{a\_{rechts}} &= \green{3} \\
  \blue{b\_{rechts}} &= \blue{12}
-\end{split}
+\end{aligned}$
 
 ## Alle $x$-en naar links
 
@@ -82,12 +82,12 @@ $\green{a\_{rechts}x}$ uit het
 rechterlid wegvallen en hebben we enkel in het linkerlid nog een $x$.
 In ons voorbeeld is de $\green{a\_{rechts}x}$ uit het rechterlid $\green{3x}$.
 
-\begin{split}
+$\begin{aligned}
 \Leftrightarrow -2x - 2 &= 3x + 12\\
  \Leftrightarrow -2x - 2 \green{- 3x} &= 3x + 12 \green{- 3x}\\
  \Leftrightarrow \udouble{-2x} - 2 \udouble{\green{- 3x}} &= \cancelto{0}{3x\green{- 3x}} + 12\\
  \Leftrightarrow \udouble{-5x} - 2 &= 12\\
-\end{split}
+\end{aligned}$
 
 We zien dat de $3x$ inderdaad is verdwenen uit het rechterlid.
 We krijgen een vergelijking van de vorm
@@ -96,11 +96,11 @@ $$a\cdot x + b\_{links} = b_{rechts}$$
 
 met enkel nog in het linkerlid een $x$. Hierbij is
 
-\begin{split}
+$\begin{aligned}
 a &= -5\\
  b\_{links} &= -2\\
  b\_{rechts} &= 12
-\end{split}
+\end{aligned}$
 
 ## Alle getallen naar rechts
 
@@ -112,12 +112,12 @@ naar het rechterlid. Dat doen we ook in twee stappen.
    linkerlid.
 
 In de eerste stap trekken we $b\_{links}$ <Mute text="($= -2$)" /> af van het linker- en rechterlid:
-\begin{split}
+$\begin{aligned}
 \Leftrightarrow -5x - 2 &= 12\\
  \Leftrightarrow -5x - 2 \orange{- (-2)} &= 12 \orange{- (-2)}\\
  \Leftrightarrow -5x \cancelto{0}{- 2\orange{- (-2)}} &= \udash{12 \orange{+ 2}}\\
  \Leftrightarrow -5x &= \udash{14}\\
-\end{split}
+\end{aligned}$
 
 We hebben nu een vergelijking van de vorm
 
@@ -125,20 +125,20 @@ $$a\cdot x = b$$
 
 met nog maar één getal in het rechterlid. Hierbij is
 
-\begin{split}
+$\begin{aligned}
 a &= -5 \\
  b &= 14
-\end{split}
+\end{aligned}$
 
 Nu moeten we enkel nog de $a$ links weg krijgen. Dat kunnen we doen door het
 linker- en rechterlid te delen door $a$ <Mute text="($= -5$)" />.
 
-\begin{split}
+$\begin{aligned}
 \Leftrightarrow -5x &= 14\\
  \Leftrightarrow \frac{-5x}{\orange{-5}} &= \frac{14}{\orange{-5}}\\
  \Leftrightarrow \cancelto{1}{\frac{-5}{\orange{-5}}}\cdot x &= \frac{14}{\orange{-5}}\\
  \Leftrightarrow x &= -\frac{14}{5}\\
-\end{split}
+\end{aligned}$
 
 Et voilà! We hebben $x$ gevonden! De [oplossingsverzameling](intro#oplossingsverzameling) van de vergelijking
 is $V = \\{-\frac{14}{5}\\}$.
