--- a/src/content/lessen/wiskunde/afgeleiden_1/differentiequotient/index.mdx
+++ b/src/content/lessen/wiskunde/afgeleiden_1/differentiequotient/index.mdx
@@ -39,22 +39,22 @@ Daarvoor moeten we de **afgelegde afstand** <Mute text="(hoeveel (kilo)meter?)"
 /> delen door de **tijd die nodig was** <Mute text="(hoeveel uur of seconden?)"
 /> om die afstand af te leggen:
 
-\begin{split}
+$\begin{aligned}
 \text{gem. snelheid} &= \frac{\green{\text{afgelegde afstand} }}{\orange{\text{tijd die nodig was}}}\\
-\end{split}
+\end{aligned}$
 
 Wanneer de chronometer op $\orange{1{,}00~\si{s}}$ stond, was Maria
 $\green{20~\si{m}}$ ver. Bij $\orange{3{,}00~\si{s}}$, was ze
 $\green{180~\si{m}}$ ver. De gemiddelde snelheid tussen
 $\orange{1{,}00~\si{s}}$ en $\orange{3{,}00~\si{s}}$ is dus:
 
-\begin{split}
+$\begin{aligned}
 \text{gem. snelheid} &= \frac{\green{\text{afgelegde afstand} }}{\orange{\text{tijd die nodig was}}}\\
  &= \frac{\green{180~\si{m}} - \green{20~\si{m}}}{\orange{3{,}00~\si{s}} - \orange{1{,}00~\si{s}}}\\
  &= \frac{\green{160~\si{m}}}{\orange{2{,}00~\si{s}}}\\
  &= 80{,}0~\si{m/s}\\
  &= 288~\si{km/h}
-\end{split}
+\end{aligned}$
 
 Lekker snel! 🚀
 
@@ -150,10 +150,10 @@ schrijven. Verschillen als "$\green{f(x\_2)} - \green{f(x\_1)}$" en
 die telkens voluit te moeten schrijven. Daarom gaan we zulke verschillen
 afkorten. Hiervoor gebruiken we de Griekse hoofdletter $\Delta$ (de delta):
 
-\begin{split}
+$\begin{aligned}
 \green{f(x_2)} - \green{f(x_1)} &= \green{\Delta f(x)}\\
  \orange{x_2} - \orange{x_1} &= \orange{\Delta x}
-\end{split}
+\end{aligned}$
 
 Die "$\Delta$" lijkt wat overweldigend, maar is eigenlijk niets meer dan een
 verkorte schrijfwijze. Met behulp van deze $\Delta$, kunnen we het
