--- a/src/content/lessen/wiskunde/eentermen/variabelen/index.mdx
+++ b/src/content/lessen/wiskunde/eentermen/variabelen/index.mdx
@@ -57,10 +57,10 @@ zijn, zoals $-5{,}2~\si{m}$.
 We zeggen dus dat de variabelen $\orange{\text{lengte}}$ en
 $\blue{\text{breedte}}$ elementen zijn van $\mathbb{Q}^+$. Dat noteren we als volgt:
 
-\begin{split}
+$\begin{aligned}
 \orange{\text{lengte}} &\in \mathbb{Q}^+\\
  \blue{\text{breedte}} &\in \mathbb{Q}^+\\
-\end{split}
+\end{aligned}$
 
 Hetzelfde geldt voor de oppervlakte, die ook een positief rationaal getal moet zijn:
 
@@ -104,11 +104,11 @@ $\orange{5{,}0~\si{m}}$ en een breedte van $\blue{4{,}0~\si{m}}$. Dan kunnen ze 
 variabelen $\orange{l}$ en $\blue{b}$ invullen in de formule voor de
 oppervlakte:
 
-\begin{split}
+$\begin{aligned}
 A &= \orange{l} \cdot \blue{b}\\
  \Leftrightarrow A &= \orange{5{,}0~\si{m}} \cdot \blue{4{,}0~\si{m}}\\
  \Leftrightarrow A &= 20~\si{m}^2
-\end{split}
+\end{aligned}$
 
 We vinden dat wanneer de variabele $\orange{l=5{,}0~\si{m}}$ en de variabele
 $\blue{b=4{,}0~\si{m}}$, dat dan de variabele
