--- a/src/content/lessen/wiskunde/eentermen/vereenvoudigen/index.mdx
+++ b/src/content/lessen/wiskunde/eentermen/vereenvoudigen/index.mdx
@@ -55,11 +55,11 @@ minteken binnen de haakjes moet je ook tot de macht verheffen. Dat doe je door
 in gedachten het **minteken te vervangen door $(-1)$** en die mee te verheffen
 tot de macht:
 
-\begin{split}
+$\begin{aligned}
 (\orange{-}y)^2 &= (\orange{(-1)}\cdot y)^2\\
  &= \orange{(-1)}^2\cdot y^2\\
  &= y^2
-\end{split}
+\end{aligned}$
 
 Terug invullen in het voorbeeld geeft:
 
@@ -87,11 +87,11 @@ $(-1)$**. Dit doen we ook voor het minteken van de coëfficiënt. Vervolgens
 zetten we alle $(-1)-$en voorop en bepalen we het uiteindelijke teken van de
 coëfficiënt.
 
-\begin{split}
+$\begin{aligned}
 \orange{-}3y\cdot 2^3x^3z^3\cdot y^2\cdot \blue{(-2)} \cdot \green{(-5)} &= \orange{(-1)}\cdot 3y\cdot 2^3x^3z^3\cdot y^2\cdot \blue{(-1)\cdot 2} \cdot \green{(-1)\cdot 5}\\
  &= \orange{(-1)}\cdot\blue{(-1)}\cdot\green{(-1)}\cdot 3\cdot y\cdot 2^3x^3z^3\cdot y^2\cdot \blue{2} \cdot \green{5}\\
  &= \orange{-}3\cdot y\cdot 2^3x^3z^3\cdot y^2\cdot \blue{2} \cdot \green{5}
-\end{split}
+\end{aligned}$
 
 <Expand title="Waarom mag je alle $(-1)-$en voorop zetten?">
 
@@ -99,11 +99,11 @@ De vermenigvuldiging van rationale getallen is **commutatief**. <Mute
 text="(Hetzelfde geldt voor reële getallen.)" /> Dat betekent dat de volgorde
 waarin je een vermenigvuldiging uitrekent, niet uitmaakt:
 
-\begin{split}
+$\begin{aligned}
 5\cdot 2 \cdot 3 = 30\\
  3 \cdot 2 \cdot 5 = 30\\
  2 \cdot 5 \cdot 3 = 30\\
-\end{split}
+\end{aligned}$
 
 Je mag in een vermenigvuldiging van rationale getallen de **factoren dus altijd
 van plaats veranderen**.
@@ -113,13 +113,13 @@ met $(-1)$. Een minteken is dus hetzelfde als een **factor $(-1)$**. Hierboven
 zeiden we dat we in een vermenigvuldiging de factoren altijd van plaats mogen
 veranderen, dus we mogen gerust alle $(-1)-$en voorop zetten.
 
-\begin{split}
+$\begin{aligned}
 \orange{-}5\cdot (\orange{-}2) \cdot (\orange{-}3) &= - 30\\
  \orange{-}2\cdot (\orange{-}3) \cdot (\orange{-}5) &= - 30\\
  \orange{-}2\cdot (\orange{-}5) \cdot (\orange{-}3) &= - 30\\
  \orange{(-1)} \cdot 2 \cdot \orange{(-1)} \cdot 5 \cdot \orange{(-1)} \cdot 3 &= - 30\\
  \orange{(-1)} \cdot \orange{(-1)} \cdot \orange{(-1)} \cdot 2\cdot 5 \cdot 3 &= - 30\\
-\end{split}
+\end{aligned}$
 
 
 </Expand>
@@ -139,11 +139,11 @@ $$-3\gray{\cdot y}\cdot 2^3\gray{x^3z^3\cdot y^2}\cdot 2 \cdot 5$$
 
 Dit uitrekenen geeft:
 
-\begin{split}
+$\begin{aligned}
 -3\cdot 2^3 \cdot 2 \cdot 5 &= -3 \cdot 8 \cdot 10\\
  &= -24 \cdot 10 \\
  &= -240
-\end{split}
+\end{aligned}$
 
 Dit resultaat terug invullen geeft:
 
@@ -156,32 +156,32 @@ De vermenigvuldiging van rationale getallen is **commutatief**. <Mute
 text="(Dat is ook zo voor reële getallen.)" /> Dat betekent dat de volgorde
 waarin je een vermenigvuldiging uitrekent, niet uitmaakt:
 
-\begin{split}
+$\begin{aligned}
 4\cdot 5 \cdot 7 = 140\\
  7 \cdot 4 \cdot 5 = 140\\
  5 \cdot 4 \cdot 7 = 140\\
-\end{split}
+\end{aligned}$
 
 Je mag in een vermenigvuldiging van rationale getallen de **factoren dus altijd
 van plaats veranderen**. Omdat zowel de variabelen als de getallen in onze
 eenterm _rationaal_ zijn <Mute text="(reëel mag ook)" />, mogen we ze dus van
 plaats veranderen.
 
-\begin{split}
+$\begin{aligned}
 4 \cdot a \cdot b \cdot 3 \\
  = 3 \cdot a \cdot 4 \cdot b\\
  = b \cdot 3 \cdot a \cdot 4\\
-\end{split}
+\end{aligned}$
 
 We kiezen ervoor om het volledige
 [cijfergedeelte](eenterm/#coëfficiënt-en-lettergedeelte) vooraan te zetten
 en als eerste uit te rekenen.
 
-\begin{split}
+$\begin{aligned}
 \orange{4} \cdot a \cdot b \cdot \orange{3} \\
  = \orange{4 \cdot 3} \cdot a \cdot b \\
  = \orange{12} \cdot a \cdot b \\
-\end{split}
+\end{aligned}$
 
 </Expand>
 
@@ -200,10 +200,10 @@ $$-240\cdot \orange{y}\cdot x^3z^3 \cdot \orange{y^2}$$
 
 Het optellen van de exponenten van $\orange{y}$ geeft:
 
-\begin{split}
+$\begin{aligned}
 -240\cdot \orange{y^1}\cdot x^3z^3 \cdot \orange{y^2} &= -240\cdot \orange{y^{1 + 2}}\cdot x^3z^3\\
  &= -240\cdot \orange{y^{3}}\cdot x^3z^3\\
-\end{split}
+\end{aligned}$
 
 <Expand title="Waarom tellen we de exponenten bij elkaar op?">
 
