--- a/src/content/lessen/wiskunde/functies/nulpunten/index.mdx
+++ b/src/content/lessen/wiskunde/functies/nulpunten/index.mdx
@@ -30,11 +30,11 @@ stellen het functievoorschrift gelijk aan _nul_ omdat we op zoek zijn naar de
 x-waarden die het voorschrift <Mute text="en dus de y-waarde" /> _nul_ maken.
 Voor het bovenstaande voorbeeld:
 
-\begin{split}
+$\begin{aligned}
 f(x) = 0 \\
  \Leftrightarrow x - 2 = 0 \\
  \Leftrightarrow x = 2
-\end{split}
+\end{aligned}$
 
 We vinden inderdaad de nulwaarde $x=2$.
 
