--- a/src/content/lessen/wiskunde/rekenen/volgorde_van_de_bewerkingen/index.mdx
+++ b/src/content/lessen/wiskunde/rekenen/volgorde_van_de_bewerkingen/index.mdx
@@ -23,34 +23,34 @@ uitrekenen?
 
 Zo?
 \begin{equation}
-\begin{split}
+$\begin{aligned}
 \neg{4 - 5} \cdot 8 ^ 2
 &= \neg{-1} \cdot 8 ^ 2 \\
  &= -8 ^ 2 \\
  &= \neg{-64}
-\end{split}
+\end{aligned}$
 \label{eq:sumfirst}
 \end{equation}
 
 Of zo?
 \begin{equation}
-\begin{split}
+$\begin{aligned}
 4 - \neg{5 \cdot 8} ^ 2
 &= 4 - \neg{40}^2 \\
  &= 4 - \neg{1600} \\
  &= \neg{- 1596}
-\end{split}
+\end{aligned}$
 \label{eq:multfirst}
 \end{equation}
 
 Of misschien zo?
 \begin{equation}
-\begin{split}
+$\begin{aligned}
 4 - 5 \cdot \pos{8 ^ 2}
 &= 4 - 5 \cdot \pos{64} \\
  &= 4 - \pos{320} \\
  &= \pos{- 316}
-\end{split}
+\end{aligned}$
 \label{eq:expfirst}
 \end{equation}
 
@@ -78,11 +78,11 @@ allebei voorrang op een som en een aftrekking. Wanneer twee zulke bewerkingen
 na elkaar geschreven staan (dus bv. een deling en dan een vermenigvuldiging),
 spreken we af om gewoon **van links naar rechts** te werken.
 De uitdrukking $8 \div 4 \cdot 3$ rekenen we dus uit als
-\begin{split}
+$\begin{aligned}
 \pos{8 \div 4} \cdot 3
 &= \pos{2} \cdot 3 \\
  &= \pos{6}
-\end{split}
+\end{aligned}$
 omdat we de deling eerst tegenkomen wanneer we van links naar rechts lezen.
 
 We zullen die volgorde van de bewerkingen eens toepassen op $\vba$.
@@ -166,7 +166,7 @@ $$\sqrt{-6 + 5^2 \cdot 2}$$
 Hier passen we apart de volgorde van de bewerkingen op toe. Het resultaat
 stoppen we dan in de oorspronkelijke uitdrukking.
 \begin{equation}
-\begin{split}
+$\begin{aligned}
 \sqrt{-6 + \clra{5^2} \cdot 2}
 &= \sqrt{-6 + \clra{25} \cdot 2} \\
  &= \sqrt{-6 + \clra{25 \cdot 2}} \\
@@ -175,7 +175,7 @@ stoppen we dan in de oorspronkelijke uitdrukking.
  &= \sqrt{\clra{44}} \\
  &= \clra{\sqrt{44}} \\
  &\approx \clra{6{,}63\ldots}
-\end{split}
+\end{aligned}$
 \end{equation}
 
 De oorspronkelijke uitdrukking wordt dus:
