--- a/src/content/lessen/wiskunde/veeltermen/bewerkingen/index.mdx
+++ b/src/content/lessen/wiskunde/veeltermen/bewerkingen/index.mdx
@@ -57,18 +57,18 @@ $\mathbb{R}$ associatief is**. Dat betekent dat het niet uitmaakt of we al dan
 niet haakjes zetten in een optelling en dat het niet uitmaakt waar we dan wel
 die haakjes zouden zetten. We kunnen alle **haakjes dus gewoon weglaten**:
 
-\begin{split}
+$\begin{aligned}
 \orange{(}2a^2b - 4ab^3\orange{)} + \orange{(}2ab^3 - 3a^2b\orange{)} &=
 2a^2b - 4ab^3 + 2ab^3 - 3a^2b
-\end{split}
+\end{aligned}$
 
 Nu krijgen we een veelterm die we eenvoudig kunnen **herleiden** door de
 gelijksoortige eentermen bij elkaar op te tellen:
 
-\begin{split}
+$\begin{aligned}
 \orange{2a^2b} \green{- 4ab^3} \green{+ 2ab^3} \orange{- 3a^2b} &= \orange{(2 - 3)\cdot a^2b} + \green{(-4 + 2)\cdot ab^3}\\
  &= \orange{-a^2b} - \green{2\cdot ab^3}\\
-\end{split}
+\end{aligned}$
 
 > Als je niet meer goed weet wat het juist betekent om een veelterm te
 > _"herleiden"_, lees dan zeker onze les over het [vereenvoudigen en herleiden
@@ -91,19 +91,19 @@ Bij het weglaten van de haakjes, vermenigvuldigen we eigenlijk elke term in de
 tweede veelterm met het minteken. Net zoals $-(-3) = +3$. Dat betekent dat
 **alle tekens van die veelterm moeten veranderen**:
 
-\begin{split}
+$\begin{aligned}
 (-2x^3 - 5x^2y + 6) - (\orange{2x^2y + 3 - 6x^3}) &=
 -2x^3 - 5x^2y + 6 \orange{- 2x^2y - 3 + 6x^3}
-\end{split}
+\end{aligned}$
 
 Vervolgens is het weer een kwestie van de veelterm te **herleiden**, net als
 bij het optellen van veeltermen:
 
-\begin{split}
+$\begin{aligned}
 \orange{-2x^3} \green{- 5x^2y} \blue{+ 6} \green{- 2x^2y} \blue{- 3} \orange{+ 6x^3}
 &= \orange{(-2 + 6)\cdot x^3} + \green{(- 5 - 2)\cdot x^2y} + \blue{(6 - 3)}\\
  &= \orange{4\cdot x^3} -\green{7\cdot x^2y} + \blue{3}\\
-\end{split}
+\end{aligned}$
 
 ## Een veelterm vermenigvuldigen met een eenterm
 
@@ -181,22 +181,22 @@ $$(-2u^2v^3 + 2u^2v^2 - 4uv^3):(\orange{u}v^2) = (-3\orange{u}v^3 + 2\orange{u}v
 > grondtal** toepassen. Wanneer we delen door $u$ moeten we daarom in elke
 > term van de veelterm $1$ aftrekken van de exponent van $u$. Bij $-2u^2v^3$,
 > bijvoorbeeld, krijgen we na een deling door $u$ $-2\orange{u}v^3$ omdat
-> \begin{split}
+> $\begin{aligned}
 
     -2\orange{u^2}v^3:\orange{u} &= -2\orange{u^{2 - 1}}v^3\\
     &= -2\orange{u}v^3
 
-\end{split}
+\end{aligned}$
 
 > Bij de deling van $-4uv^3$ door $u$ **valt de $u$ in de term weg** omdat
-> \begin{split}
+> $\begin{aligned}
 
     -4\orange{u}v^3:\orange{u} &= -4\orange{u^{1-1}}v^3\\
     &= -4\orange{u^0}v^3\\
     &= -4\cdot \orange{1} \cdot v^3\\
     &= -4v^3
 
-\end{split}
+\end{aligned}$
 
 Nu we de $u$ uit de deler hebben gehaald, blijven we enkel nog over met een
 deling door $v^2$. We gebruiken dezelfde rekenregels om ook die deling uit te
@@ -263,11 +263,11 @@ vereenvoudigen of herleiden.
 We zoeken naar termen met **hetzelfde lettergedeelten** en tellen de
 coëfficiënten van deze termen bij elkaar op:
 
-\begin{split}
+$\begin{aligned}
 -4a^3b + 8a^3b^2 \orange{+ 3a^2b^2} - 6a^2b^3 + a^2b \orange{- 2a^2b^2}
 &= -4a^3b + 8a^3b^2 \orange{+ (3 - 2)a^2b^2} - 6a^2b^3 + a^2b\\
  &= -4a^3b + 8a^3b^2 \orange{+ a^2b^2} - 6a^2b^3 + a^2b\\
-\end{split}
+\end{aligned}$
 
 Tenslotte **rangschikken** we de veelterm volgens dalende graad van de
 eentermen:
@@ -287,22 +287,22 @@ hetzelfde grondtal** in ons achterhoofd houden. Die zegt dat we bij zo een
 vermenigvuldiging de **exponenten moeten optellen**. We zullen eens tonen hoe
 dat gaat wanneer we die $x^{(m + 1)}$ binnen de haakjes brengen:
 
-\begin{split}
+$\begin{aligned}
 \orange{x^{(m + 1)}}y^n\cdot (-3x + x^2y^n) &= y^n\cdot (-3x\cdot\orange{x^{(m + 1)}} + x^2\cdot\orange{x^{(m + 1)}}y^n)\\
  &= y^n\cdot (-3x^{1 + \orange{(m + 1)}} + x^{2 + \orange{(m + 1)}}y^n)\\
  &= y^n\cdot (-3x^{1 + \orange{m + 1}} + x^{2 + \orange{m + 1}}y^n)\\
  &= y^n\cdot (-3x^{(m + 2)} + x^{(m + 3)}y^n)\\
-\end{split}
+\end{aligned}$
 
 Je ziet dat we ook hier weer niets meer doen dan de exponenten bij elkaar op te
 tellen. We brengen nu op dezelfde manier de $y^n$ naar binnen:
 
-\begin{split}
+$\begin{aligned}
 \orange{y^n}\cdot (-3x^{(m + 2)} + x^{(m + 3)}y^n)
 &= (-3x^{(m + 2)}\cdot\orange{y^n} + x^{(m + 3)}y^n\cdot\orange{y^n})\\
  &= (-3x^{(m + 2)}y^n + x^{(m + 3)}y^{n + \orange{n}})\\
  &= (-3x^{(m + 2)}y^n + x^{(m + 3)}y^{2n})\\
-\end{split}
+\end{aligned}$
 
 De haakjes rond onze uitkomst kunnen we gerust weglaten. We krijgen dus het
 volgende resultaat:
