--- a/src/content/lessen/fysica/grootheden_eenheden/formules_omvormen/index.mdx
+++ b/src/content/lessen/fysica/grootheden_eenheden/formules_omvormen/index.mdx
@@ -24,35 +24,35 @@ De massadichtheid van een stof zegt hoeveel $\si{kg}$ een bepaald volume van die
 Als we de massadichtheid willen berekenen wanneer we van een stof de massa $\orange{\si{m}}$ voor een bepaald volume $\orange{\si{V}}$ kennen, kunnen we de formule $\rho = \frac{\orange{\si{m}}}{\orange{\si{V}}}$ rechtstreeks gebruiken.
 
 Bijvoorbeeld: we leggen een kubusvormig blokje kurk met een zijde van $5 \si{ cm}$ op een weegschaal en lezen af dat het blokje een massa heeft van $26 \si{ g}$. Dan is de massadichtheid van kurk:
-\begin{split}
+$\begin{aligned}
 \rho &= \frac{\si{m}}{\si{V}} \\
 &= \frac{26 \si{ g}}{5 \si{ cm} \cdot 5 \si{ cm} \cdot 5 \si{ cm}}\\
 &= \frac{26 \si{ g}}{125 \si{ cm}^3}\\
 &= 0{,}208 \frac{\si{g}}{\si{cm}^3}\\
 &\approx 0{,}21 \frac{\si{g}}{\si{cm}^3}
-\end{split}
+\end{aligned}$
 
 ## Omvormen zoals vergelijkingen
 
 De technieken die we gebruiken om [vergelijkingen om te vormen](../../wiskunde/1g_vgl/omvormen), kunnen we ook gebruiken om formules om te vormen. Zo kunnen we de formule voor massadichtheid omvormen zodat $m$ alleen overblijft aan één kant:
-\begin{split}
+$\begin{aligned}
 \rho &= \frac{m}{V}\\
 \Leftrightarrow \rho \cdot \orange{V} &= \frac{m}{V} \cdot \orange{V}\\
 \Leftrightarrow \rho \cdot \orange{V} &= m \cdot \frac{\orange{V}}{V} \\
 \Leftrightarrow \rho \cdot \orange{V} &= m \cdot 1 \\
 \Leftrightarrow \rho \cdot \orange{V} &= m \\
 \Leftrightarrow m &= \rho \cdot V \\
-\end{split}
+\end{aligned}$
 
 Zo kunnen we $m$ berekenen wanneer we $\rho$ en $V$ kennen. We kunnen deze formule dan weer verder omvormen zodat $V$ alleen overblijft aan één kant:
 
-\begin{split}
+$\begin{aligned}
 m &= \rho \cdot V \\
 \Leftrightarrow \frac{m}{\orange{\rho}} &= \frac{\rho \cdot V}{\orange{\rho}} \\
 \Leftrightarrow \frac{m}{\orange{\rho}} &= \frac{\rho}{\orange{\rho}} \cdot V \\
 \Leftrightarrow \frac{m}{\orange{\rho}} &= 1 \cdot V \\
 \Leftrightarrow \frac{m}{\orange{\rho}} &= V \\
 \Leftrightarrow V &= \frac{m}{\rho}
-\end{split}
+\end{aligned}$
 
 Met die formule kunnen we dan $V$ berekenen wanneer $m$ en $\rho$ gegeven zijn.
