--- a/src/content/lessen/fysica/grootheden_eenheden/prefixen/index.mdx
+++ b/src/content/lessen/fysica/grootheden_eenheden/prefixen/index.mdx
@@ -55,10 +55,10 @@ Voor grote afstanden maken we vaak gebruik van de kilometer ($\si{km}$). De [SI-
 
 Bijvoorbeeld: de afstand tussen Brussel en Amsterdam is ongeveer $173{,}89 \si{ km}$ in vogelvlucht. Zet dit om naar de juiste SI-eenheid.
 
-\begin{split}
+$\begin{aligned}
 173{,}89 \orange{\si{ k}}\si{m}
 = 173{,}89 \cdot \orange{10^3}\si{ m}
-\end{split}
+\end{aligned}$
 
 ## Prefixen toevoegen
 
@@ -66,12 +66,12 @@ De [SI-eenheid](intro#si-eenheden-maken-duidelijke-afspraken) van massa is de ki
 
 Bijvoorbeeld: voor een bepaald recept heb je $250 \si{ g}$ bloem nodig. Zet dit om naar de juiste SI-eenheid.
 
-\begin{split}
+$\begin{aligned}
 250\si{ g}
 &= 250 \cdot \orange{10^{-3}} \cdot \blue{10^3} \si{ g}\\
 &= 250 \cdot \orange{10^{-3}} \blue{\si{ k}} \si{g}\\
 &= \orange{0{,}250} \blue{\si{ k}} \si{g}\\
-\end{split}
+\end{aligned}$
 
 ## Prefixen omzetten
 
@@ -83,12 +83,12 @@ Stel dat we $5{,}2 \green{\si{ k}}\si{m}$ willen omzetten naar $\blue{\si{d}}\si
 1. Zet alle prefixen om naar een macht van 10. De opgave wordt dan:
    "Zet $5{,}2 \cdot \green{10^{3}} \si{ m}$ om naar $\ldots\text{iets}\ldots\cdot \blue{10^{-1}}\si{ m}$"
 2. Los op volgens de methode van het [omzetten van machten van 10](machten_van_10#machten-van-10-omzetten)
-   \begin{split}
+   $\begin{aligned}
    5{,}2 \cdot \green{10^{3}} \si{ m}
    &= 5{,}2 \cdot \green{10^{3}} \cdot \orange{10^1} \cdot \blue{10^{-1}}\si{ m}\\
    &= 5{,}2\cdot 10^{\green{3} + \orange{1}} \cdot \blue{10^{-1}} \si{ m}\\
    &= 5{,}2\cdot 10^4 \cdot \blue{10^{-1}}\si{ m}
-   \end{split}
+   \end{aligned}$
 3. Vervang de bijhorende macht van 10 terug door de prefix:
    $$5{,}2\cdot 10^4 \cdot \blue{\si{d}}\si{m}$$
 
@@ -98,20 +98,20 @@ De eenheid van volume is $\si{m}^3$ <Mute text="(kubieke meter)" />.  Als er
 een prefix voor zo'n eenheid staat, bijvoorbeeld $\orange{\si{c}} \si{m}^3$,
 wordt die prefix ook tot de derde macht verheven. Er staat dus eigenlijk
 
-\begin{split}
+$\begin{aligned}
 \orange{\si{c}}\si{m}^3
 &= \orange{\si{c}}^3\si{m}^3\\
 &= (\orange{10^{-2}})^3\si{m}^3\\
 &= 10^{\orange{-2}\cdot 3}\si{m}^3\\
 &= 10^{-6}\si{m}^3
-\end{split}
+\end{aligned}$
 
 Voor prefixen van een oppervlakte (eenheid $\si{m}^2$) doen we net hetzelfde, maar nu met een kwadraat:
 
-\begin{split}
+$\begin{aligned}
 \orange{\si{c}}\si{m}^2
 &= \orange{\si{c}}^2\si{m}^2\\
 &= (\orange{10^{-2}})^2\si{m}^2\\
 &= 10^{\orange{-2}\cdot 2} \si{m}^2\\
 &= 10^{-4}\si{m}^2
-\end{split}
+\end{aligned}$
