--- a/src/content/lessen/wiskunde/afgeleiden_1/afgeleide/index.mdx
+++ b/src/content/lessen/wiskunde/afgeleiden_1/afgeleide/index.mdx
@@ -70,35 +70,35 @@ telkens dichter bij $0$ kiest**.
 
 We beginnen bijvoorbeeld met $\Delta x = 0{,}1$:
 
-\begin{split}
+$\begin{aligned}
 \frac{\green{f(4 + 0{,}1)} - \green{f(4)}}{\orange{0{,}1}} &= \frac{\green{f(4{,}1)} - \green{f(4)}}{\orange{0{,}1}}
-\end{split}
+\end{aligned}$
 
 Je ziet dat we eerst nog $\green{f(4{,}1)}$ en $\green{f(4)}$ moeten berekenen.
 Dat is snel gefikst:
 
-\begin{split}
+$\begin{aligned}
 \green{f(4{,}1)} &= -3 \cdot \green{4{,}1}^2 + 5\\
  &= -3 \cdot 16{,}81 + 5\\
  &= -50{,}43 + 5\\
  &= \green{-45{,}43}
-\end{split}
+\end{aligned}$
 
-\begin{split}
+$\begin{aligned}
 \green{f(4)} &= -3 \cdot \green{4}^2 + 5\\
  &= -3 \cdot 16 + 5\\
  &= -48 + 5\\
  &= \green{-43}
-\end{split}
+\end{aligned}$
 
 Nu we $\green{f(4{,}1)}$ en $\green{f(4)}$ kennen, kunnen we verder met het
 berekenen van ons differentiequotiënt:
 
-\begin{split}
+$\begin{aligned}
 \frac{\green{f(4{,}1)} - \green{f(4)}}{\orange{0{,}1}} &= \frac{\green{-45{,}43} - (\green{-43})}{\orange{0{,}1}}\\
  &= \frac{\green{-2{,}43}}{\orange{0{,}1}}\\
  &= -24{,}3
-\end{split}
+\end{aligned}$
 
 Wanneer we $\Delta x = 0{,}1$ kiezen, is ons differentiequotiënt voor de
 functie $f(x) = - 3\cdot x^2 + 5$ in $x = 4$ dus gelijk aan $-24{,}3$. We gaan
@@ -120,10 +120,10 @@ die $3$ stilaan wegdrijft naar een plek waar ze zo klein is dat ze eigenlijk
 verwaarloosbaar is. Hoe dichter we $\Delta x$ naar $0$ brengen, hoe dichter de
 uitkomst van het differentiequotiënt gaat naar $-24$. We kunnen dus zeggen dat:
 
-\begin{split}
+$\begin{aligned}
 f'(4) &= \lim\_{\Delta x \to 0} \frac{\green{f(4 + \Delta x)} - \green{f(4)}}{\orange{\Delta x}}\\
  &= -24
-\end{split}
+\end{aligned}$
 
 Dat is eigenlijk wat we bedoelen met die limiet: **naar welk getal gaat de
 uitkomst van het differentiequotiënt wanneer we $\Delta x$ steeds dichter en
@@ -148,13 +148,13 @@ bij $0$ kwamen. Nu gaan we het iets doordachter aanpakken. We gaan de $\Delta
 x$ even laten voor wat het is en $\green{f(4 + \Delta x)}$ uitrekenen door
 letterlijk $\green{4 + \Delta x}$ in te vullen in ons functievoorschrift:
 
-\begin{split}
+$\begin{aligned}
 \green{f(4 + \Delta x)} &= -3 \cdot (\green{4 + \Delta x})^2 + 5\\
  &= -3 \cdot (16 + 2\cdot 4 \cdot \Delta x + (\Delta x)^2) + 5\\
  &= -3 \cdot (16 + 8\Delta x + (\Delta x)^2) + 5\\
  &= -48 - 24\Delta x -3(\Delta x)^2 + 5\\
  &= \green{-43 -24\Delta x -3(\Delta x)^2}
-\end{split}
+\end{aligned}$
 
 > ⚠️ Let op! $(\green{4 + \Delta x})^2$ is een **merkwaardig product**! Het is
 > van de vorm $(a + b)^2 = a^2 + 2ab + b^2$.
@@ -162,31 +162,31 @@ letterlijk $\green{4 + \Delta x}$ in te vullen in ons functievoorschrift:
 Als we nu ook nog $\green{f(4)}$ uitrekenen, kennen we de twee termen in de
 teller <Mute text="(bovenaan)" /> van de breuk:
 
-\begin{split}
+$\begin{aligned}
 \green{f(4)} &= -3 \cdot \green{4}^2 + 5\\
  &= -3 \cdot 16 + 5\\
  &= -48 + 5\\
  &= \green{-43}
-\end{split}
+\end{aligned}$
 
 Nu we $\green{f(4 + \Delta x)}$ en $\green{f(4)}$ kennen, kunnen we de teller
 van ons differentiequotiënt al voor een stuk uitrekenen. Van de limiet trekken
 we ons voorlopig niets aan, die schrijven we gewoon over.
 
-\begin{split}
+$\begin{aligned}
 f'(4) &= \lim\_{\Delta x \to 0} \frac{\green{f(4 + \Delta x)} - \green{f(4)}}{\orange{\Delta x}}\\
  &= \lim\_{\Delta x \to 0} \frac{\green{-43 - 24\Delta x - 3(\Delta x)^2} - (\green{-43})}{\orange{\Delta x}}\\
  &= \lim\_{\Delta x \to 0} \frac{\green{-43 - 24\Delta x - 3(\Delta x)^2} + 43}{\orange{\Delta x}}\\
  &= \lim\_{\Delta x \to 0} \frac{\green{- 24\Delta x - 3(\Delta x)^2}}{\orange{\Delta x}}\\
-\end{split}
+\end{aligned}$
 
 Nu krijgen we een breuk die we kunnen **vereenvoudigen**, want zowel teller als
 noemer zijn **deelbaar door $\Delta x$**:
 
-\begin{split}
+$\begin{aligned}
 \lim\_{\Delta x \to 0} \frac{\green{- 24\Delta x - 3(\Delta x)^2}}{\orange{\Delta x}}
 &= \lim\_{\Delta x \to 0} \frac{\green{- 24 - 3\Delta x}}{\orange{1}} \\
-\end{split}
+\end{aligned}$
 
 Zo krijgen we een heel eenvoudige limiet:
 
