--- a/src/content/lessen/wiskunde/eentermen/macht/index.mdx
+++ b/src/content/lessen/wiskunde/eentermen/macht/index.mdx
@@ -23,10 +23,10 @@ $$(a^2)^3$$
 De rekenregel voor het berekenen van de macht van een macht zegt dat we de
 **exponenten met elkaar moeten vermenigvuldigen**:
 
-\begin{split}
+$\begin{aligned}
 (a^2)^3 &= a^{2\cdot 3}\\
  &= a^6
-\end{split}
+\end{aligned}$
 
 De rekenregel voor het berekenen van de wortel van een macht zegt dat we de
 **exponent moeten delen door de graad van de wortel**. Als we bijvoorbeeld de
@@ -39,10 +39,10 @@ $$\sqrt[3]{a^{12}}$$
 
 Dan werken we dat als volgt uit:
 
-\begin{split}
+$\begin{aligned}
 \sqrt[3]{a^{12}} &= a^{12/3}\\
  &= a^4
-\end{split}
+\end{aligned}$
 
 <Expand title="Alle variabelen in deze les zijn $\in \mathbb{R}$ (of $\in \mathbb{Q}$)">
 
@@ -76,29 +76,29 @@ $$(-5x^3y^2)^2$$
 
 De eerste stap is om de macht van de **coëfficiënt** te berekenen (de $-5$):
 
-\begin{split}
+$\begin{aligned}
 (\orange{-5}x^3y^2)^2 &= (\orange{-5})^2\cdot(x^3y^2)^2\\
  &=\orange{25}\cdot(x^3y^2)^2\\
-\end{split}
+\end{aligned}$
 
 Vervolgens berekenen we de macht van het **lettergedeelte**. Hiervoor gebruiken
 we de rekenregels om de macht van een macht te berekenen. We zullen eerst de
 macht van de $x$ berekenen:
 
-\begin{split}
+$\begin{aligned}
 25\cdot(\orange{x^3}y^2)^2
 &= 25(\orange{x^3})^2\cdot(y^2)^2\\
  &= 25\orange{x^{3\cdot 2}}\cdot(y^2)^2\\
  &= 25\orange{x^{6}}\cdot(y^2)^2\\
-\end{split}
+\end{aligned}$
 
 Het berekenen van de macht van de $y$ doen we op dezelfde manier:
 
-\begin{split}
+$\begin{aligned}
 25x^{6}\cdot(\orange{y^2})^2
 &= 25x^{6}\orange{y^{2\cdot 2}} \\
  &= 25x^{6}\orange{y^{4}} \\
-\end{split}
+\end{aligned}$
 
 De uitkomst van de macht van de veelterm is dus:
 
@@ -119,11 +119,11 @@ $$\sqrt{49a^6b^4}$$
 
 Dan moeten we eerst de wortel berekenen van de **coëfficiënt** (hier $49$):
 
-\begin{split}
+$\begin{aligned}
 \sqrt{\orange{49}a^6b^4}
 &= \sqrt{\orange{49}}\cdot \sqrt{a^6b^4}\\
  &= \orange{7}\cdot \sqrt{a^6b^4}\\
-\end{split}
+\end{aligned}$
 
 Vervolgens moeten we de wortel van elke factor in het **lettergedeelte**
 berekenen door de exponent van elke factor te **delen door de graad van de
@@ -132,20 +132,20 @@ geval $2$. We moeten met andere woorden alle exponenten van de factoren in het
 lettergedeelte ($a^6$ en $b^4$ in dit geval) gaan delen door $2$. We beginnen
 met het berekenen van de exponent van $a$:
 
-\begin{split}
+$\begin{aligned}
 7\cdot \sqrt{\orange{a^6}b^4}
 &=7\cdot \sqrt{\orange{a^6}}\cdot \sqrt{b^4} \\
  &=7\orange{a^{6/2}}\cdot \sqrt{b^4} \\
  &=7\orange{a^3}\cdot \sqrt{b^4} \\
-\end{split}
+\end{aligned}$
 
 Ten slotte doen we hetzelfde voor $b$:
 
-\begin{split}
+$\begin{aligned}
 7a^3\cdot \sqrt{\orange{b^4}}
 &= 7a^3\orange{b^{4/2}} \\
  &= 7a^3\orange{b^2} \\
-\end{split}
+\end{aligned}$
 
 De uitkomst van de wortel van de eenterm is dus:
 
@@ -163,20 +163,20 @@ Dan moeten we weer goed de **rekenregel voor het berekenen van een macht van
 een macht** in ons achterhoofd houden. Die zegt dat we de **exponenten moeten
 vermenigvuldigen**. We zullen dit al eens doen voor de $a$ in de opgave:
 
-\begin{split}
+$\begin{aligned}
 (\orange{a^{(m - 1)}}b^{(n + 2)})^3
 &= (\orange{a^{(m - 1)}})^3\cdot (b^{(n + 2)})^3\\
  &= \orange{a^{(m - 1)\cdot 3}}\cdot (b^{(n + 2)})^3\\
  &= \orange{a^{3m - 3}}\cdot (b^{(n + 2)})^3\\
-\end{split}
+\end{aligned}$
 
 We kunnen nu hetzelfde doen voor de $b$:
 
-\begin{split}
+$\begin{aligned}
 a^{3m - 3}\cdot (\orange{b^{(n + 2)}})^3
 &= a^{3m - 3}\orange{b^{(n + 2)\cdot 3}}\\
  &= a^{3m - 3}\orange{b^{3n + 6}}\\
-\end{split}
+\end{aligned}$
 
 De uitkomst van onze macht is dus:
 
@@ -186,11 +186,11 @@ Het berekenen van de **wortel van een eenterm met letterexponenten**, kunnen we
 op een gelijkaardige manier doen. We geven voor de volledigheid hier ook nog
 een kort voorbeeld van:
 
-\begin{split}
+$\begin{aligned}
 \sqrt[5]{x^{(20m + 10)}y^{5n}}
 &= x^{(20m + 10)/5}y^{5n/5}\\
  &= x^{4m + 2}y^{n}\\
-\end{split}
+\end{aligned}$
 
 Je ziet dat het weer voornamelijk een kwestie is van het correct toepassen van
 de rekenregels, in dit geval de rekenregel voor het berekenen van de wortel van
