--- a/src/content/lessen/wiskunde/eentermen/product/index.mdx
+++ b/src/content/lessen/wiskunde/eentermen/product/index.mdx
@@ -26,10 +26,10 @@ We zien dat de twee factoren van de vermenigvuldiging allebei het **grondtal
 $a$** hebben. De rekenregel voor het vermenigvuldigen van machten met hetzelfde
 grondtal zegt dat we in dat geval de **exponenten bij elkaar moeten optellen**:
 
-\begin{split}
+$\begin{aligned}
 a^2\cdot a^3 &= a^{2 + 3}\\
  &= a^5
-\end{split}
+\end{aligned}$
 
 De rekenregel voor het _delen_ van machten met hetzelfde grondtal is heel
 gelijkaardig. Stel dat we de volgende deling moeten uitrekenen <Mute
@@ -41,10 +41,10 @@ We zien dat het deeltal $x^5$ hetzelfde grondtal heeft als de deler $x^2$. De
 rekenregel voor het delen van machten met hetzelfde grondtal zegt dat we in dat
 geval de **exponenten van elkaar moeten aftrekken**:
 
-\begin{split}
+$\begin{aligned}
 x^5:x^2 &= x^{5 - 2}\\
  &= x^3
-\end{split}
+\end{aligned}$
 
 Als we deze rekenregels goed kunnen toepassen, zal het vermenigvuldigen en
 delen van eentermen veel eenvoudiger worden.
@@ -84,31 +84,31 @@ $$-3x^3y^2 \cdot 4xy^2$$
 De eerste stap is om de **coëfficiënten** van de eentermen met elkaar te
 vermenigvuldigen:
 
-\begin{split}
+$\begin{aligned}
 \orange{-3}x^3y^2 \cdot \orange{4}xy^2
 &= (\orange{-3\cdot 4})\cdot x^3y^2\cdot xy^2\\
  &= \orange{-12}\cdot x^3y^2\cdot xy^2
-\end{split}
+\end{aligned}$
 
 Vervolgens vermenigvuldigen we het lettergedeelte van beide eentermen. We
 zullen beginnen met het vermenigvuldigen van de factoren die $x$ als grondtal
 hebben:
 
-\begin{split}
+$\begin{aligned}
 -12\cdot \orange{x^3}y^2\cdot \orange{x}y^2
 &= -12\cdot\orange{x^{3 + 1}}\cdot y^2\cdot y^2\\
  &= -12\orange{x^{4}}\cdot y^2\cdot y^2
-\end{split}
+\end{aligned}$
 
 Je ziet dat we hiervoor de rekenregel voor het vermenigvuldigen van machten met
 hetzelfde grondtal hebben toegepast. Ten slotte vermenigvuldigen we de factoren
 die $y$ als grondtal hebben:
 
-\begin{split}
+$\begin{aligned}
 -12x^{4}\cdot \orange{y^2}\cdot \orange{y^2}
 &= -12x^{4}\cdot \orange{y^{2 + 2}}\\
  &= -12x^{4}\orange{y^{4}}
-\end{split}
+\end{aligned}$
 
 Het resultaat van de vermenigvuldiging is dus:
 
@@ -131,31 +131,31 @@ $$21u^2v^4:(-7uv^2)$$
 Dan gaan we eerst de **coëfficiënt** van de eenterm in het deeltal (de $21$)
 delen door de coëfficiënt van de eenterm in de deler (de $-7$):
 
-\begin{split}
+$\begin{aligned}
 \orange{21}u^2v^4:(\orange{-7}uv^2)
 &= \big(\orange{21}:(\orange{-7})\big)u^2v^4:(uv^2)\\
  &= \orange{-3}u^2v^4:(uv^2)\\
-\end{split}
+\end{aligned}$
 
 Vervolgens moeten we het **lettergedeelte** van het deeltal (de $u^2v^4$) delen
 door het lettergedeelte van de deler (de $uv^2$). Hiervoor kunnen we de
 rekenregel van het delen van machten met hetzelfde grondtal gebruiken. We
 zullen beginnen met het delen van de machten met grondtal $u$:
 
-\begin{split}
+$\begin{aligned}
 -3\orange{u^2}v^4:(\orange{u}v^2)
 &= -3\orange{u^{2 - 1}}v^4:v^2\\
  &= -3\orange{u^{1}}v^4:v^2\\
  &= -3\orange{u}v^4:v^2\\
-\end{split}
+\end{aligned}$
 
 Ten slotte delen we ook de factoren die grondtal $v$ hebben:
 
-\begin{split}
+$\begin{aligned}
 -3u\orange{v^4}:\orange{v^2}
 & = -3u\orange{v^{4 - 2}}\\
  & = -3u\orange{v^{2}}\\
-\end{split}
+\end{aligned}$
 
 Klaar! 🎉 Het resultaat van onze deling is:
 
@@ -175,24 +175,24 @@ vermenigvuldiging de **exponenten moeten optellen**. We zullen eens tonen hoe
 dat gaat wanneer we de lettergedeelten met $x$ als grondtal met elkaar gaan
 vermenigvuldigen:
 
-\begin{split}
+$\begin{aligned}
 \orange{x^{(m + 1)}}y^n\cdot x^2y^n
 &= y^n\cdot \orange{x^{(m + 1)}}x^2\cdot y^n\\
  &= y^n\cdot x^{\orange{(m + 1)} + 2}y^n\\
  &= y^n\cdot x^{\orange{m + 1} + 2}y^n\\
  &= y^n\cdot x^{(m + 3)}y^n\\
-\end{split}
+\end{aligned}$
 
 Je ziet dat we ook hier weer niets meer doen dan de exponenten bij elkaar op te
 tellen. We vermenigvuldigen nu op dezelfde manier de lettergedeelten met $y$
 als grondtal:
 
-\begin{split}
+$\begin{aligned}
 \orange{y^n}\cdot x^{(m + 3)}y^n
 &= x^{(m + 3)}\cdot\orange{y^n}y^n\\
  &= x^{(m + 3)}y^{\orange{n} + n}\\
  &= x^{(m + 3)}y^{2n}\\
-\end{split}
+\end{aligned}$
 
 We krijgen het volgende resultaat:
 
@@ -202,12 +202,12 @@ Voor het **delen** van eentermen met letterexponenten doen we precies
 hetzelfde, maar dan passen we uiteraard de rekenregels voor het _delen_ van
 machten met hetzelfde grondtal toe. Een eenvoudig voorbeeld:
 
-\begin{split}
+$\begin{aligned}
 a^{(m+2)}b^m:(a^{(2m - 1)}b^3)
 &= a^{(m+2) - (2m - 1)}b^{m - 3}\\
  &= a^{m+ 2 - 2m + 1}b^{m - 3}\\
  &= a^{-m + 3}b^{m - 3}\\
-\end{split}
+\end{aligned}$
 
 De uitkomst van deze deling is dus:
 
