--- a/src/content/lessen/wiskunde/veeltermen/merkwaardige_producten/index.mdx
+++ b/src/content/lessen/wiskunde/veeltermen/merkwaardige_producten/index.mdx
@@ -40,7 +40,7 @@ Eigenlijk is het heel eenvoudig om merkwaardige producten uit te rekenen. Je
 kan gewoon de distributieve eigenschap toepassen. Bijvoorbeeld voor
 $(a + b)^2$:
 
-\begin{split}
+$\begin{aligned}
 (\blue{a} + \blue{b})\cdot(\orange{a} + \orange{b})
 &= \blue{a}\cdot \orange{a}
 \quad&+ \blue{a} \cdot \orange{b}
@@ -51,10 +51,10 @@ $(a + b)^2$:
 &+ \orange{a}\blue{b}
 &+ b^2 \\
  &= a^2 &+ 2ab &&+ b^2
-\end{split}
+\end{aligned}$
 
 We kunnen hetzelfde voor $(a - b)^2$ doen:
-\begin{split}
+$\begin{aligned}
 (\blue{a} - \blue{b})\cdot(\orange{a} - \orange{b})
 &= \blue{a}\cdot \orange{a}
 \quad&+ \blue{a} \cdot (-\orange{b})
@@ -65,10 +65,10 @@ We kunnen hetzelfde voor $(a - b)^2$ doen:
 &- \orange{a}\blue{b}
 &+ b^2 \\
  &= a^2 &- 2ab &&+ b^2
-\end{split}
+\end{aligned}$
 
 En voor $(a + b)\cdot(a - b)$:
-\begin{split}
+$\begin{aligned}
 (\blue{a} + \blue{b})\cdot(\orange{a} - \orange{b})
 &= \blue{a}\cdot \orange{a}
 \quad&+ \blue{a} \cdot (-\orange{b})
@@ -79,7 +79,7 @@ En voor $(a + b)\cdot(a - b)$:
 &+ \orange{a}\blue{b}
 &- b^2 \\
  &= a^2 &&&- b^2
-\end{split}
+\end{aligned}$
 
 In de voorlaatste lijn valt $- \blue{a}\orange{b} + \orange{a}\blue{b}$ weg
 omdat het gelijk is aan $0$.
@@ -114,21 +114,21 @@ $99^2$ schrijven als $(100 - 1)^2$ en we kunnen dus de formule van $(a - b)^2$
 toepassen: $(a - b)^2 = a^2 -2ab + b^2$ waarbij we $a$ vervangen door $100$ en
 $b$ vervangen door $1$.
 
-\begin{split}
+$\begin{aligned}
 99^2 &= (100 - 1)^2 \\
  &= 100^2 -2\cdot 100 \cdot 1 + 1^2 \\
  &= 10\ 000 -200 + 1 \\
  &= 9801
-\end{split}
+\end{aligned}$
 
 We kunnen ook snel $102^2$ berekenen door het op te splitsen in $100 + 2$:
 
-\begin{split}
+$\begin{aligned}
 102^2 &= (100 + 2)^2 \\
  &= 100^2 +2\cdot 100 \cdot 2 + 2^2 \\
  &= 10\ 000 +400 + 4 \\
  &= 10\ 404
-\end{split}
+\end{aligned}$
 
 Als je dus ooit een moeilijk kwadraat moet berekenen, kan je altijd proberen om
 het getal op te splitsen in een som of verschil van twee getallen waarvan je
