Remove u{dot,dash,...} commands

--- a/src/content/lessen/wiskunde/1g_vgl/functies/index.mdx
+++ b/src/content/lessen/wiskunde/1g_vgl/functies/index.mdx
@@ -70,11 +70,11 @@ $\begin{aligned}
 $\begin{aligned}
 -x + 4 &= 2x - 3\\
  \Leftrightarrow -x + 4 \pink{- 2x} &= 2x - 3 \pink{- 2x}\\
- \Leftrightarrow \udot{-x} + 4 \udot{\pink{- 2x}} &= \cancelto{0}{2x \pink{- 2x}} - 3\\
- \Leftrightarrow \udot{-3x} + 4 &= - 3\\
+ \Leftrightarrow -x + 4 \udot{\pink{- 2x}} &= \cancelto{0}{2x \pink{- 2x}} - 3\\
+ \Leftrightarrow -3x + 4 &= - 3\\
  \Leftrightarrow -3x + 4 \pink{-4} &= - 3 \pink{-4}\\
- \Leftrightarrow -3x + \cancelto{0}{4 \pink{-4}} &= \udot{- 3 \pink{-4}}\\
- \Leftrightarrow -3x &= \udot{- 7}\\
+ \Leftrightarrow -3x + \cancelto{0}{4 \pink{-4}} &= - 3 \pink{-4}\\
+ \Leftrightarrow -3x &= - 7\\
  \Leftrightarrow \frac{-3x}{\pink{-3}} &= \frac{- 7}{\pink{-3}}\\
  \Leftrightarrow \cancelto{1}{\frac{-3}{\pink{-3}}}\cdot x &= \frac{- 7}{\pink{-3}}\\
  \Leftrightarrow x &= \frac{7}{3}\\
