--- a/src/content/lessen/wiskunde/1g_vgl/omvormen/index.mdx
+++ b/src/content/lessen/wiskunde/1g_vgl/omvormen/index.mdx
@@ -68,8 +68,8 @@ Om die om te zetten naar de vorm die we willen <Mute text="(namelijk $x= \text{(
 $\begin{aligned}
 2x - 6 &= 8 - x\\
  \Leftrightarrow 2x - 6 \orange{+ x} &= 8 - x \orange{+ x}\\
- \Leftrightarrow \udot{2x} - 6 \udot{\orange{+ x}} &= 8 \cancelto{0}{- x \orange{+ x}}\\
- \Leftrightarrow \udot{\orange{3}x} - 6 &= 8\\
+ \Leftrightarrow 2x - 6 \orange{+ x} &= 8 \cancelto{0}{- x \orange{+ x}}\\
+ \Leftrightarrow \orange{3x} - 6 &= 8\\
 \end{aligned}$
 
 Door aan beide kanten van de vergelijking $\orange{x}$ op te tellen, valt de $-x$ uit het rechterlid weg en is er enkel in het linkerlid nog een $x$.
@@ -78,8 +78,8 @@ In de vorm $x= \text{(een getal)}$ staan er in het linkerlid geen getallen meer.
 $\begin{aligned}
 3x - 6 &= 8\\
  \Leftrightarrow 3x - 6 \orange{+ 6} &= 8 \orange{+6}\\
- \Leftrightarrow 3x \cancelto{0}{- 6 \orange{+ 6}} &= \udot{8 \orange{+6}}\\
- \Leftrightarrow 3x &= \udot{14}\\
+ \Leftrightarrow 3x \cancelto{0}{- 6 \orange{+ 6}} &= 8 \orange{+6}\\
+ \Leftrightarrow 3x &= 14\\
 \end{aligned}$
 
 Vervolgens moeten we enkel nog de $3$ weg krijgen. Dat kan als volgt:
