--- a/src/content/lessen/wiskunde/afgeleiden_1/afleidbaarheid/index.mdx
+++ b/src/content/lessen/wiskunde/afgeleiden_1/afleidbaarheid/index.mdx
@@ -55,11 +55,11 @@ dichter bij $0$ komen.
 
 -   Wanneer we $\Delta x$ **kleiner** houden dan $0$, zeggen we dat we de
     **linkerlimiet** berekenen <Mute text="(omdat we van links naar $0$ gaan)" />. Dit
-    schrijven we als $$\lim\_{\Delta x \underset{\lt}{\to} 0}$$ Let op het
+    schrijven we als $$\lim\_{\Delta x \lt{\to} 0}$$ Let op het
     _kleiner dan_-teken ($\lt$) onder de pijl van de limiet.
 -   Wanneer we $\Delta x$ **groter** houden dan $0$, zeggen we dat we de
     **rechterlimiet** berekenen <Mute text="(omdat we van rechts naar $0$ gaan)" />. Dit
-    schrijven we als $$\lim\_{\Delta x \underset{\gt}{\to} 0}$$ Let op het
+    schrijven we als $$\lim\_{\Delta x \gt{\to} 0}$$ Let op het
     _groter dan_-teken ($\gt$) onder de pijl van de limiet.
 
 In veel gevallen zal je voor de linker- en rechterlimiet hetzelfde vinden.
@@ -72,9 +72,9 @@ Net als de linker- en rechterlimiet, is er ook een **linker- en
 rechterafgeleide**:
 
 -   De **linkerafgeleide** in $x = a$ is de afgeleide die je krijgt door de **linkerlimiet**
-    te berekenen: $$ \gray{\orange{\lim\_{\Delta x \underset{\lt}{\to} 0}} \frac{ f(a + \Delta x) - f(a) }{\Delta x}} $$
+    te berekenen: $$ \gray{\orange{\lim\_{\Delta x \lt{\to} 0}} \frac{ f(a + \Delta x) - f(a) }{\Delta x}} $$
 -   De **rechterafgeleide** in $x = a$ is de afgeleide die je krijgt door de **rechterlimiet**
-    te berekenen: $$ \gray{\orange{\lim\_{\Delta x \underset{\gt}{\to} 0}} \frac{ f(a + \Delta x) - f(a) }{\Delta x}} $$
+    te berekenen: $$ \gray{\orange{\lim\_{\Delta x \gt{\to} 0}} \frac{ f(a + \Delta x) - f(a) }{\Delta x}} $$
 
 Of de linker- en/of rechterafgeleide bestaat en of ze gelijk zijn aan elkaar,
 bepaalt de **afleidbaarheid** van de functie in $x = a$. Er zijn drie gevallen:
@@ -157,9 +157,9 @@ Een functie is afleidbaar in $x = a$ als en slechts als de linker- en
 rechterafgeleide in $x = a$ **bestaan én gelijk** zijn.
 
 -   De linkerafgeleide is gedefinieerd als: $$\lim\_{\Delta x
-  \underset{\lt}{\to} 0} \frac{ f(a + \Delta x) - f(a) }{\Delta x} $$
+  \lt{\to} 0} \frac{ f(a + \Delta x) - f(a) }{\Delta x} $$
 -   De rechterafgeleide is gedefinieerd als: $$ \lim\_{\Delta x
-  \underset{\gt}{\to} 0} \frac{ f(a + \Delta x) - f(a) }{\Delta x}$$
+  \gt{\to} 0} \frac{ f(a + \Delta x) - f(a) }{\Delta x}$$
 
 </Attention>
 
