--- a/src/content/lessen/wiskunde/eentermen/som/index.mdx
+++ b/src/content/lessen/wiskunde/eentermen/som/index.mdx
@@ -57,9 +57,9 @@ eentermen, zijn hier
 
 Aangeduid in ons voorbeeld:
 
-$$\usolidorange{6xy^3} + \udoubleblue{5x} + \usolidorange{2xy^3} \udoubleblue{- 8x}$$
+$$6xy^3 + \udoubleblue{5x} + \usolidorange{2xy^3} \udoubleblue{- 8x}$$
 
-Merk op dat we ook het minteken van $\udoubleblue{- 8x}$ aanduiden, omdat een
+Merk op dat we ook het minteken van $- 8x$ aanduiden, omdat een
 [minteken altijd deel uitmaakt](eenterm/#coëfficiënt-en-lettergedeelte) van
 de eenterm waar het bij staat.
 
