--- a/src/content/lessen/fysica/grootheden_eenheden/machten_van_10/index.mdx
+++ b/src/content/lessen/fysica/grootheden_eenheden/machten_van_10/index.mdx
@@ -69,8 +69,8 @@ We willen de komma van $0{,}00000000334$ met
 $\begin{aligned}
 0{,}00000000334 &= 0{,}00000000334 \cdot \frac{\blue{10^9}}{\orange{10^9}} \\
  &= 0{,}00000000334 \cdot \blue{10^9} \cdot \frac{1}{\orange{10^9}} \\
- &= \udotblue{0{,}00000000334 \cdot \blue{10^{9}}} \cdot \orange{10^{-9}} \\
- &= \udotblue{3{,}34} \cdot \orange{10^{-9}}
+ &= 0{,00000000334 \cdot \blue{10^{9}}} \cdot \orange{10^{-9}} \\
+ &= 3{,34} \cdot \orange{10^{-9}}
 \end{aligned}$
 
 Het **<span class="orange">delen door $10^9$</span>** komt neer op
@@ -93,8 +93,8 @@ Daarom moeten we ook terug delen door $10^{-11}$. Dat is echter hetzelfde als
 **<span class="orange">vermenigvuldigen met $10^{11}$</span>**.
 
 $\begin{aligned}
-149\ 600\ 000\ 000 &= \udotblue{149\ 600\ 000\ 000 \cdot \blue{10^{-11}}} \cdot \orange{10^{11}} \\
- &= \udotblue{1{,}496} \cdot \orange{10^{11}} \\
+149\ 600\ 000\ 000 &= 149\ 600\ 000\ 000 \cdot \blue{10^{-11}} \cdot \orange{10^{11}} \\
+ &= 1{,496} \cdot \orange{10^{11}} \\
 \end{aligned}$
 
 Merk wel op dat nu het aantal [beduidende cijfers](beduidende_cijfers) is
@@ -112,10 +112,10 @@ en vervolgens
 **<span class="orange">vermenigvuldigen met $10^{11}$ om het getal gelijk te houden</span>**.
 
 $\begin{aligned}
-3{,}34 \cdot 10^{-9} &= 3{,}34 \cdot \udotorange{10^{-9} \cdot \orange{10^{11}}} \cdot \blue{10^{-11}} \\
- &= 3{,}34 \cdot \udotorange{10^{2}} \cdot \blue{10^{-11}} \\
- &= \udoubleorange{3{,}34 \cdot 10^{2}} \cdot \blue{10^{-11}} \\
- &= \udoubleorange{334} \cdot \blue{10^{-11}} \\
+3{,}34 \cdot 10^{-9} &= 3{,}34 \cdot 10^{-9 \cdot \orange{10^{11}}} \cdot \blue{10^{-11}} \\
+ &= 3{,}34 \cdot 10^{2} \cdot \blue{10^{-11}} \\
+ &= 3{,34 \cdot 10^{2}} \cdot \blue{10^{-11}} \\
+ &= 334 \cdot \blue{10^{-11}} \\
 \end{aligned}$
 
 ## Samengevat
