--- a/src/content/lessen/wiskunde/1g_vgl/oplossen/index.mdx
+++ b/src/content/lessen/wiskunde/1g_vgl/oplossen/index.mdx
@@ -85,8 +85,8 @@ In ons voorbeeld is de $\green{a\_{rechts}x}$ uit het rechterlid $\green{3x}$.
 $\begin{aligned}
 \Leftrightarrow -2x - 2 &= 3x + 12\\
  \Leftrightarrow -2x - 2 \green{- 3x} &= 3x + 12 \green{- 3x}\\
- \Leftrightarrow \udouble{-2x} - 2 \udouble{\green{- 3x}} &= \cancelto{0}{3x\green{- 3x}} + 12\\
- \Leftrightarrow \udouble{-5x} - 2 &= 12\\
+ \Leftrightarrow -2x - 2 \udouble{\green{- 3x}} &= \cancelto{0}{3x\green{- 3x}} + 12\\
+ \Leftrightarrow -5x - 2 &= 12\\
 \end{aligned}$
 
 We zien dat de $3x$ inderdaad is verdwenen uit het rechterlid.
@@ -115,8 +115,8 @@ In de eerste stap trekken we $b\_{links}$ <Mute text="($= -2$)" /> af van het li
 $\begin{aligned}
 \Leftrightarrow -5x - 2 &= 12\\
  \Leftrightarrow -5x - 2 \orange{- (-2)} &= 12 \orange{- (-2)}\\
- \Leftrightarrow -5x \cancelto{0}{- 2\orange{- (-2)}} &= \udash{12 \orange{+ 2}}\\
- \Leftrightarrow -5x &= \udash{14}\\
+ \Leftrightarrow -5x \cancelto{0}{- 2\orange{- (-2)}} &= 12 \orange{+ 2}\\
+ \Leftrightarrow -5x &= 14\\
 \end{aligned}$
 
 We hebben nu een vergelijking van de vorm
